Retrieve/objects/Country_Info__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code_2L__c</fullName>
        <label>Country Code 2L</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_3L__c</fullName>
        <label>Country Code 3L</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrencyCode__c</fullName>
        <description>This is for store currency code information</description>
        <label>CurrencyCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_not_mass_assign_duplicate_leads__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LMT - Check to disable mass assignment of duplicate leads</description>
        <inlineHelpText>Check to disable mass assignment of duplicate leads</inlineHelpText>
        <label>Do not mass assign duplicate leads</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>It will contain the information about language used in the country</description>
        <inlineHelpText>language used in the country</inlineHelpText>
        <label>Language</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>